[package]
name = "xu"
version = "0.2.3"
authors = ["Brendan Cox <brendancox21@gmail.com>"]
description = "xu is an evolutionary computation library."
repository = "https://github.com/yuulive/xu"
homepage = "https://github.com/yuulive/xu"
readme = "README.md"
license = "Apache-2.0"
keywords = ["heuristics", "genetic", "algorithm"]

[dependencies]
rand = "0.6"